namespace BokenshaChan
{
	public interface IInteract
	{
		public bool CanInteract();
		public void Interact();
	}
}