namespace BokenshaChan
{
	public interface IMovable
	{
		public void Move(int x, int y);
	}
}